--- a/src/components/classroom/classroom.css
+++ b/src/components/classroom/classroom.css
@@ -1,6 +1,7 @@
 
 .main-div{
-    padding: 2.5em 8em;
+    padding: 2.5em 5em;
+    z-index: -1;
 }
 
 .vidoes-nav{
@@ -71,7 +72,7 @@
 }
 
 .right-aside{
-    width: 55%;
+    width: 70%;
     text-align: right;
 }
 
@@ -88,10 +89,11 @@
 
 .video-display{
     display: flex;
+    justify-content: space-between;
 }
 
 .video-scroll{
-    width: 42%;
+    width: 35%;
     box-shadow: 0px 4px 29px #F0F3FF;
     border-radius: 20px;
     padding: 10px 20px;
@@ -101,7 +103,7 @@
 .topic-lists{
     width: 90%;
     /* margin-top: 25px; */
-    height: 350px;
+    height: 60vh;
     padding: 20px;
     overflow-x: hidden; 
     overflow-y: scroll;
@@ -116,7 +118,7 @@
   
   /* Track */
   .topic-lists::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
+    box-shadow: inset 0 0 5px #F1F3FD; 
     border-radius: 17px;
   }
    
@@ -183,4 +185,44 @@
 .shift-up{
     position: relative;
     bottom: 10px;
+}
+
+/****************************Notes styles ****************************************/
+
+.video-side{
+    align-self: flex-end;
+    width: 46% !important;
+}
+
+.notes-note img{
+    height: 28px;
+    margin-right: 18px;
+}
+
+.notes-note{
+    display: flex;
+}
+
+.note{
+    padding-top: 10px;
+    padding-bottom: 5px;
+    line-height: 25px;
+    border-bottom: solid 1.5px #ECEFFF;
+}
+
+.p-head{
+    display: flex;
+    width: 85%;
+    justify-content: space-between;
+}
+
+.p-head a {
+    text-decoration: none;
+    color: #066AEF;
+}
+
+.n-icon{
+    position: relative;
+    top: 3px;
+
 }
