--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,12 @@
 body {
   margin: 0;
   padding: 0;
+  position: relative;
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif; */
   font-family: 'Helvetica 45 Light 400', sans-serif;
+  color: #30302E;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
